--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
                  data-separator-vertical="^\^\^\^\^\^\^"
                  data-charset="utf8">
         </section>
+
+        <section id="what_is_a_pipeline"
+                 data-markdown="slides/what_is_a_pipeline.md"
+                 data-separator="^------"
+                 data-separator-vertical="^\^\^\^\^\^\^"
+                 data-charset="utf8">
+        </section>
     </div>
 </div>
 
