Añade la sección "Usando Jenkinsfile desde un repositorio"

--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
                  data-separator-vertical="^\^\^\^\^\^\^"
                  data-charset="utf8">
         </section>
+
+        <section id="jenkinsfile"
+                 data-markdown="slides/jenkinsfile_in_scm.md"
+                 data-separator="^------"
+                 data-separator-vertical="^\^\^\^\^\^\^"
+                 data-charset="utf8">
+        </section>
     </div>
 </div>
 
