Añade la sección "Trabajando con nuestro Jenkinsfile"

--- a/index.html
+++ b/index.html
@@ -83,8 +83,15 @@
                  data-charset="utf8">
         </section>
 
-        <section id="jenkinsfile"
+        <section id="jenkinsfile_in_scm"
                  data-markdown="slides/jenkinsfile_in_scm.md"
+                 data-separator="^------"
+                 data-separator-vertical="^\^\^\^\^\^\^"
+                 data-charset="utf8">
+        </section>
+
+        <section id="working_with_your_jenkinsfile"
+                 data-markdown="slides/working_with_your_jenkinsfile.md"
                  data-separator="^------"
                  data-separator-vertical="^\^\^\^\^\^\^"
                  data-charset="utf8">
