Añade la sección "Multi-branch Pipelines"

--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
                  data-separator-vertical="^\^\^\^\^\^\^"
                  data-charset="utf8">
         </section>
+
+        <section id="multibranch_pipelines"
+                 data-markdown="slides/multibranch_pipelines.md"
+                 data-separator="^------"
+                 data-separator-vertical="^\^\^\^\^\^\^"
+                 data-charset="utf8">
+        </section>
     </div>
 </div>
 
