Añade la sección "Shared Libraries"

--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
                  data-separator-vertical="^\^\^\^\^\^\^"
                  data-charset="utf8">
         </section>
+
+        <section id="shared_libraries"
+                 data-markdown="slides/shared_libraries.md"
+                 data-separator="^------"
+                 data-separator-vertical="^\^\^\^\^\^\^"
+                 data-charset="utf8">
+        </section>
     </div>
 </div>
 
