--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
                  data-separator-vertical="^\^\^\^\^\^\^"
                  data-charset="utf8">
         </section>
+
+        <section id="development_tools"
+                 data-markdown="slides/development_tools.md"
+                 data-separator="^------"
+                 data-separator-vertical="^\^\^\^\^\^\^"
+                 data-charset="utf8">
+        </section>
     </div>
 </div>
 
